<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvTitle"
                    style="@style/darkTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15ssp"
                    android:layout_marginTop="@dimen/_36sdp"
                    android:layout_marginEnd="@dimen/_15ssp"
                    android:text="@string/txt_sign_up"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tlName"
                    style="@style/textInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_25sdp"
                    app:endIconDrawable="@drawable/check"
                    app:endIconMode="custom"
                    app:endIconTint="@color/button_color"
                    app:layout_constraintEnd_toEndOf="@id/tvTitle"
                    app:layout_constraintStart_toStartOf="@id/tvTitle"
                    app:layout_constraintTop_toBottomOf="@id/tvTitle"
                    app:startIconDrawable="@drawable/user">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etName"
                        style="@style/editText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/hint_name"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tlEmail"
                    style="@style/textInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    app:endIconDrawable="@drawable/check"
                    app:endIconMode="custom"
                    app:endIconTint="@color/button_color"
                    app:layout_constraintEnd_toEndOf="@id/tlName"
                    app:layout_constraintStart_toStartOf="@id/tlName"
                    app:layout_constraintTop_toBottomOf="@id/tlName"
                    app:startIconDrawable="@drawable/email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEmail"
                        style="@style/editText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/hint_email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tlPassword"
                    style="@style/textInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    app:layout_constraintEnd_toEndOf="@id/tlEmail"
                    app:layout_constraintStart_toStartOf="@id/tlEmail"
                    app:layout_constraintTop_toBottomOf="@id/tlEmail"
                    app:passwordToggleDrawable="@drawable/password_toggle"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/dark_text_color"
                    app:startIconDrawable="@drawable/lock">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPassword"
                        style="@style/editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSignUp"
                    style="@style/button_green"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_18sdp"
                    android:padding="@dimen/_12sdp"
                    android:text="@string/txt_continue"
                    app:layout_constraintEnd_toEndOf="@id/tlPassword"
                    app:layout_constraintStart_toStartOf="@id/tlPassword"
                    app:layout_constraintTop_toBottomOf="@id/tlPassword" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvGoToSignIn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_78sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:text="@string/txt_have_an_account"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_goneMarginBottom="@dimen/_20sdp" />

</androidx.constraintlayout.widget.ConstraintLayout>